force-app/main/default/objects/TL_Est_DivisionEntry__c/TL_Est_DivisionEntry__c.object-meta.xml
<CustomObject>
    <label>Division Entry</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Division Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Division Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>