force-app/main/default/objects/TL_Est_DivisionEntry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>TL_Est_Category__c</referenceTo>
    <relationshipName>Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>