force-app/main/default/objects/TL_Est_DivisionEntry__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>TL_Est_DivisionTemplate__c</referenceTo>
    <relationshipLabel>Division Entries</relationshipLabel>
    <relationshipName>Division_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>