force-app/main/default/objects/TL_Est_DivisionEntry__c/fields/Dollars_PSF__c.field-meta.xml
<CustomField>
    <fullName>Dollars_PSF__c</fullName>
    <formula>Value__c / Estimate__r.Project__r.Building_Size_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollars PSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>