force-app/main/default/objects/TL_Est_DivisionEntry__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <referenceTo>TL_Est_Estimate__c</referenceTo>
    <relationshipName>Divisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>